@@ -421,3 +421,6 @@ Revision	Version Updated		Log Message
 483		C++			More updates to the test batch files
 484		C++			Import parser improvements from CK2 To EU3
 485		C++			Update readme file
+489		C++			For DW, prevent the number of soldier pops in a province from ever being zero
+490		C++			Fix unmapped DW provinces in Hokkaido and northern Korea
+491		C++			Fix various small errors (unused variables and such)
